# mdiscord

./: README.md  pyproject.toml  requirements.txt  setup.py
.docker/: Dockerfile  docker-compose.yml
mdiscord/: __init__.py  base_model.py  client.py  endpoints.py  exceptions.py  http_client.py  meta_types.py  models.py  opcodes.py  routes.py  serializer.py  types.py  utils.py  websocket.py
mdiscord/http/: client.py  endpoints.py
mdiscord/types/: __init__.py  base.py  base_model.py  meta.py  models.py  types.py
mdiscord/utils/: routes.py  serializer.py  utils.py
mdiscord/websocket/: __init__.py  opcodes.py  websocket.py
