[project]
name = "mDiscord"
version = "3"
authors = [{ name = "Mmesek" }]
description = "Discord API Wrapper with type casting"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
requires-python = ">=3.10"

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "pytest-asyncio", "pytest-mock"]
lint = ["ruff"]
dev = ["mdiscord[tests,lint]", "pre-commit"]

[project.urls]
"Homepage" = "https://github.com/Mmesek/mdiscord"
"Bug Tracker" = "https://github.com/Mmesek/mdiscord/issues"
"Source Code" = "https://github.com/Mmesek/mdiscord"

[project.license]
file = "LICENSE"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-report ndiff --cov=mdiscord tests/"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
testpaths = ["mdiscord", "tests"]

[tool.ruff]
line-length = 120
src = ["mdiscord"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "E401", # Multiple imports on one line
    "F403", # Wildcard import
    "F405", # Possibly undefined symbol or imported from wildcard
]
isort.combine-as-imports = true
pydocstyle.convention = "numpy"
